[package]
name = "am-you-unique-warp"
version = "0.1.0"
authors = ["Osrepnay"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
reqwest = {version = "0.11", features = ["json"]}
tokio = {version = "1", features = ["full"]}
lazy_static = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
woothee = "0.11.0"
